--- a/templates/mail/detailMessageTemplate.html
+++ b/templates/mail/detailMessageTemplate.html
@@ -90,44 +90,10 @@
           Anexos:
         </td>
         <td class="description" colspan="2">
-            <% 
-            var attachments = message.get("msgAttachments");
-            for (var i in attachments) {
-            %>
-              <div class="attachment attachment-arquivo-background">
-                  <div class="attachmentTitle">
+            <div id="msgAttachmentsRecipients">
 
-                      <a href="<%=message.getDownloadAttachmentRoute(attachments[i].attachmentID)%>" class="attachmentLink">
+            </div>
 
-                      <div class="downloadAttachment">
-                      </div>
-                      <div class="fileSize" style="">
-                        <%=message.getAttachmentSize(attachments[i].attachmentID)%>
-                      </div>
-                      <div class="fileName" style="">
-                        <%=unescape($.trim(attachments[i].attachmentName))%>
-                      </div>
-                    </a>
-                  </div>
-              </div>
-              <!-- <div class="simple-attachment"> 
-                    <div class="icon"></div>
-                    <a href="<%=message.getAttachmentRoute(attachments[i].attachmentID)%>" class="attachmentLink">
-                      <div class="btn btn-primary btn-right">
-                        Visualizar
-                      </div> 
-                    </a>
-                    <% if (Shared.isDesktop()) { %>
-                      <a href="<%=message.getDownloadAttachmentRoute(attachments[i].attachmentID)%>" class="attachmentLink" style="float: right;">
-                        <div class="btn btn-primary btn-right">
-                          Download</div>
-                      </a>
-                    <% } %>
-                    <div class="attachment-name"><%=unescape($.trim(attachments[i].attachmentName))%></div>
-                    <div class="attachment-size"><%=message.getAttachmentSize(attachments[i].attachmentID)%></div> 
-                    <div class="clear"></div>
-              </div> -->
-            <% } %>
         </td>
       </tr> 
       <% } %>
