--- a/templates/mail/previewAttachmentMessageTemplate.html
+++ b/templates/mail/previewAttachmentMessageTemplate.html
@@ -1,10 +1,10 @@
 <div id="attach_<%=fileID%>" class="attachment<% if (fileType != 'base64') { %> attachment-arquivo-background <% } %>">
+    <div id="preview_<%=fileID%>" class="attachmentPreview">&nbsp;</div>
     <div class="attachmentTitle">
-      <a id="attachLink_<%=fileID%>" href="#" class="deleteAttachmentLink">
-        <div class="deleteAttachment"></div>
-        <div class="fileSize"></div>
+      <a id="attachLink_<%=fileID%>" href="#" class="<% if (previewType == 'compose') { %>deleteAttachmentLink<% } else { if (Shared.isDesktop()) { %>downloadAttachmentLink<% } else { %>touchDownloadAttachmentLink<% } } %>">
+        <div class="<% if (previewType == 'compose') { %>deleteAttachment<% } else { %>downloadAttachment<% } %>"></div>
+        <div class="fileSize"><%=Shared.bytesToSize(fileSize,0)%></div>
         <div class="fileName"><%=fileName%></div>
-        
       </a>
     </div>
     <% if (fileType == "base64") { %>
