--- a/templates/master/detailContentTemplate.html
+++ b/templates/master/detailContentTemplate.html
@@ -4,6 +4,8 @@
 	<input type="text" class="searchField" value="" placeholder="Procurar Por:" />
 </div>
 
+<div id="messageDetail"></div>
+
 <div id="wrapperDetail" class="container">
 	<div id="scrollerDetail"></div>
 </div>
