--- a/templates/master/primaryContentTemplate.html
+++ b/templates/master/primaryContentTemplate.html
@@ -4,6 +4,8 @@
 	<input type="text" class="searchField" value="" placeholder="Procurar Por:" />
 </div>
 
+<div id="message"></div>
+
 <div id="wrapper" class="container">
 	<div id="scroller"></div>
 </div>
