--- a/templates/home/contextMenuTemplate.html
+++ b/templates/home/contextMenuTemplate.html
@@ -2,13 +2,16 @@
   <li>
     <input id="btn-primary-action" type="button" value="" class="hidden" style=""> 
   </li>
-  <li><a id="contextMenuButton" href="#" class="contextMenu">Menu de contexto</a></li>
+  <% var menuItemsSecondary = _.filter(menuItems, function (item) { return item.get('primary') == false; }); %>
+  <% if (typeof(menuItems) != 'undefined' && menuItemsSecondary.length > 0) { %>
+	  <li><a id="contextMenuButton" href="#" class="contextMenu">Menu de contexto</a></li>
+  <% } %>
 </ul>
 <div id="contextMenu" class="hidden">
 	<ul>
 		<% _.each(menuItems, function(menuItem){ %>
 			<% if (!menuItem.get("primary")) { %>
-				<li><a href="<%=menuItem.get("route")%>" title="<%=menuItem.get("title")%>"><div class="context-icon <%=menuItem.get("iconClass")%>"></div><%=menuItem.get("title")%></a></li>
+				<li><a href="<%=menuItem.get("route")%>" <% if (menuItem.get('action') != undefined) { %>data-action="<%= menuItem.get('action') %>"<% } %> title="<%=menuItem.get("title")%>"><div class="context-icon <%=menuItem.get("iconClass")%>"></div><%=menuItem.get("title")%></a></li>
 			<% } %>
 		<% }); %>
 	</ul>
