Correção do problema de Acentuação.

--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -11,8 +11,8 @@
                   <option value="http://api.expresso.celepar.parana">api.expresso.celepar.parana</option>
                   <option value="http://demo.expressolivre.org/api/rest/">demo.expressolivre.org</option>
             </select>
-            <input id="username" type="username" name="username" class="login-input" value="projetomobile" placeholder="Usuário" autofocus>
-            <input id="password" type="password" name="password" class="login-input" value="Nd1ph0" placeholder="Senha">
+            <input id="username" type="username" name="username" class="login-input" value="" placeholder="Usu&aacute;rio" autofocus>
+            <input id="password" type="password" name="password" class="login-input" value="" placeholder="Senha">
 
             <input id="btn-login" type="button" value="Conectar" class="btn btn-primary"  onclick="" style="width: 100%;">
       </div>
