--- a/templates/settings/settingsAboutListTemplate.html
+++ b/templates/settings/settingsAboutListTemplate.html
@@ -8,29 +8,29 @@
 			      <div class="product-logo"></div>
 			</div>
 			
-			<dt>O que é</dt>
-			<dd>O Expresso Livre é uma solução completa de comunicação que reúne Email, Agenda, Catálogo de Endereços, Workflow e Mensagens Instantâneas em um único ambiente. Por ser uma versão customizada do E-GroupWare, seu desenvolvimento também é totalmente baseado em software livre.</dd>
+			<dt>O que &eacute;</dt>
+			<dd>O Expresso Livre &eacute; uma solu&ccedil;&atilde;o completa de comunica&ccedil;&atilde;o que re&uacute;ne Email, Agenda, Cat&aacute;logo de Endere&ccedil;os, Workflow e Mensagens Instant&acirc;neas em um &uacute;nico ambiente. Por ser uma vers&atilde;o customizada do E-GroupWare, seu desenvolvimento tamb&eacute;m &eacute; totalmente baseado em software livre.</dd>
 
-			<dt>Características</dt>
+			<dt>Caracter&iacute;sticas</dt>
 			<dd>- Alta Escalabilidade<br>
 				- Baixo custo<br>
-				- Utilização de protocolos padrões<br>
-				- Integração com outros sistemas Web<br>
-				- Independência de fornecedor<br>
-				- Independência de plataforma cliente<br>
-				- Independência de plataforma servidor<br>
-				- Mobilidade dos usuários<br>
+				- Utiliza&ccedil;&atilde;o de protocolos padr&oatilde;es<br>
+				- Integra&ccedil;&atilde;o com outros sistemas Web<br>
+				- Independ&ecirc;ncia de fornecedor<br>
+				- Independ&ecirc;ncia de plataforma cliente<br>
+				- Independ&ecirc;ncia de plataforma servidor<br>
+				- Mobilidade dos usu&acute;rios<br>
 			</dd>
 
 			<dt>Saiba mais</dt>
 			<dd><a href="#">www.expressolivre.org</a></dd>
 
-			<dt>Versões</dt>
+			<dt>Vers&otilde;es</dt>
 			<dd>
 				<ul>
-					<li>Versão da Aplicação: <b><%=appVersion%></b></li>
-					<li>Versão do Expresso: <b><%=expressoVersion%></b></li>
-					<li>Versão da API: <b><%=apiVersion%></b><br><br><br><br><br></li>
+					<li>Vers&atilde;o da Aplica&ccedil;&atilde;o: <b><%=appVersion%></b></li>
+					<li>Vers&atilde;o do Expresso: <b><%=expressoVersion%></b></li>
+					<li>Vers&atilde;o da API: <b><%=apiVersion%></b><br><br><br><br><br></li>
 				</ul>
 			</dd>
 				
