--- a/templates/settings/settingsCreditsListTemplate.html
+++ b/templates/settings/settingsCreditsListTemplate.html
@@ -1,11 +1,11 @@
-<h2 class="ellipsis50">Créditos</h2>
+<h2 class="ellipsis50">Cr&eacute;ditos</h2>
 <article id="wrapperDetail" class="container">
 	<div id="scrollerDetail">
 
 		<dl id="credits">
 			
 			<dt>Projeto desenvolvido por:</dt>
-			<dd>CELEPAR - Companhia de Tecnologia da Informação e Comunicação do Estado do Paraná
+			<dd>CELEPAR - Companhia de Tecnologia da Informa&ccedil;&atilde;o e Comunica&ccedil;&atilde;o do Estado do Paran&aacute;
 				<br><br>
 				<div class="company-logo"></div>
 			</dd>
@@ -13,7 +13,7 @@
 			<dt>Desenvolvedores</dt>
 			<dd>
 				<ul>
-					<li>Jair Gonçalves Pereira Jr</li>
+					<li>Jair Gon&ccedil;alves Pereira Jr</li>
 					<li>Rafael Katayama Gobara</li>
 				</ul>
 			</dd>
@@ -24,7 +24,7 @@
 					<li>Alexandre Luiz Correia</li>
 					<li>Alexandre Rocha Wendling</li>
 					<li>Anderson Tadayuki Saikawa</li>
-					<li>Jair Gonçalves Pereira Jr</li>
+					<li>Jair Gon&ccedil;alves Pereira Jr</li>
 					<li>Nilton Emilio Buhrer Neto</li>
 					<li>Rafael Katayama Gobara</li>			
 				</ul>
