--- a/templates/settings/settingsListTemplate.html
+++ b/templates/settings/settingsListTemplate.html
@@ -1,4 +1,4 @@
-<h2 id="contentTitle" class="ellipsis50">Preferências</h2>
+<h2 id="contentTitle" class="ellipsis50">Prefer&ecirc;ncias</h2>
 <div id="wrapper" class="container">
 	<div id="scroller">
 
@@ -16,15 +16,15 @@
 						        <div class="onoffswitch-switch"></div>
 						    </label>
 						</div>
-						Login automático 
+						Login autom&aacute;tico 
 					</li>
 					<li><a href="/Settings/ChangePassword" class="settinsLink">Alterar senha</a></li>
 				</ul>
 			</dd>
-			<dt>Outras configurações</dt>
+			<dt>Outras configura&ccedil;&otilde;es</dt>
 			<dd>
 				<ul>
-					<li><a href="/Settings/ResultsPerPage" class="settinsLink">Resultados por página</a></li>
+					<li><a href="/Settings/ResultsPerPage" class="settinsLink">Resultados por p&aacute;gina</a></li>
 				</ul>
 			</dd>
 			<dt>Escrever mensagens</dt>
@@ -36,9 +36,9 @@
 			<dt>Expresso</dt>
 			<dd>
 				<ul>
-					<li><a href="/Settings/Support" class="settinsLink">Suporte / Sugestões</a></li>
+					<li><a href="/Settings/Support" class="settinsLink">Suporte / Sugest&otilde;es</a></li>
 					<li><a href="/Settings/About" class="settinsLink">Sobre o Expresso</a></li>
-					<li><a href="/Settings/Credits" class="settinsLink">Créditos</a></li>
+					<li><a href="/Settings/Credits" class="settinsLink">Cr&eacute;ditos</a></li>
 				</ul>
 			</dd>
 		</dl>
