--- a/templates/settings/settingsResultsPerPageListTemplate.html
+++ b/templates/settings/settingsResultsPerPageListTemplate.html
@@ -1,4 +1,4 @@
-<h2 class="ellipsis50">Resultados Por Página</h2>
+<h2 class="ellipsis50">Resultados Por P&aacute;gina</h2>
 <article id="wrapperDetail" class="container">
 	<div id="scrollerDetail">
 		<div id="detailList">
