--- a/templates/settings/settingsSupportListTemplate.html
+++ b/templates/settings/settingsSupportListTemplate.html
@@ -1,11 +1,11 @@
-<h2 class="ellipsis50">Suporte / Sugestões</h2>
+<h2 class="ellipsis50">Suporte / Sugest&otilde;es</h2>
 <article id="wrapperDetail" class="container">
 	<div id="scrollerDetail">
 
 		<form id="support">
 			<ol>
 				<li>
-					<textarea name="sugestao" id="sugestao" placeholder="Envie suas sugestões ou críticas para o time que administra o Expresso."></textarea>
+					<textarea name="sugestao" id="sugestao" placeholder="Envie suas sugest&otilde;es ou cr&iacute;ticas para o time que administra o Expresso."></textarea>
 				</li>
 			</ol>
 		</form>
