--- a/templates/calendar/calendarEditEventTemplate.html
+++ b/templates/calendar/calendarEditEventTemplate.html
@@ -14,12 +14,12 @@
 			</select>
 		</li>
 		<li>
-			<label for="eventName">Título *</label>
-			<input type="text" name="eventName" id="eventName" placeholder="Título" value="<%= event.get('eventName') %>" />
+			<label for="eventName">T&iacute;tulo *</label>
+			<input type="text" name="eventName" id="eventName" placeholder="T&iacute;tulo" value="<%= event.get('eventName') %>" />
 		</li>
 		<li>
-			<label for="eventDescription">Descrição</label>
-			<textarea name="eventDescription" id="eventDescription" placeholder="Descrição completa"><%= event.get('eventDescription') %></textarea>
+			<label for="eventDescription">Descri&ccedil;&atilde;o</label>
+			<textarea name="eventDescription" id="eventDescription" placeholder="Descri&ccedil;&atilde;o completa"><%= event.get('eventDescription') %></textarea>
 		</li>
 		<li>
 			<label for="eventCategoryID">Categoria</label>
@@ -42,8 +42,8 @@
 			</select>
 		</li>
 		<li>
-			<label for="eventLocation">Localização</label>
-			<input type="text" name="eventLocation" id="eventLocation" placeholder="Localização" value="<%= event.get('eventLocation') %>" />
+			<label for="eventLocation">Localiza&ccedil;&atilde;o</label>
+			<input type="text" name="eventLocation" id="eventLocation" placeholder="Localiza&ccedil;&atilde;o" value="<%= event.get('eventLocation') %>" />
 		</li>
 		<li class="date">
 			<label for="eventDateStart">Data inicial *</label>
