--- a/css/ios_7.css
+++ b/css/ios_7.css
@@ -1,5 +1,30 @@
 
-body { background-color: #F1F1F1; } 
-body #page { margin-top: 20px;} 
+body { background-color: #F1F1F1; margin-top: 20px; } 
+body #menu { margin-top: -75px; }
 
-#scrollerMenu { margin-top: 20px; }
+body #menu #personalInfo {
+	margin-top: 20px;
+}
+
+
+.message { margin-top: 0px; }
+
+.message-icon { margin-top: 20px; }
+
+.message h3{
+     margin: 20px 0 5px 0;       
+     font-size: 12px;
+
+}
+
+.message h4{
+     margin: 0 0 10px 0;
+     margin-top: 26px;
+     margin-left: 30px;       
+     font-size: 16px;
+}
+
+.message p{
+     margin: 0;     
+     font-size: 10px;                     
+}
