Adicionado nome do Alexandre Rocha Wendling como desenvolvedor do app

--- a/templates/settings/settingsCreditsListTemplate.html
+++ b/templates/settings/settingsCreditsListTemplate.html
@@ -13,6 +13,7 @@
 			<dt>Desenvolvedores</dt>
 			<dd>
 				<ul>
+					<li>Alexandre Rocha Wendling</li>
 					<li>Jair Gon&ccedil;alves Pereira Jr</li>
 					<li>Rafael Katayama Gobara</li>
 				</ul>
