--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -48,7 +48,7 @@
         </li>
         <li class="settings">
           <a href="/Settings" class="menuLink">
-            <span>Preferências</span>
+            <span>Prefer&ecirc;ncias</span>
             <div class="icon icon-settings"></div>
           </a>
         </li>
