--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -4,13 +4,17 @@
 </div>
 <form method="POST" action="#/Home" class="login-box" onsubmit="">
       <div id="loadingLogin" style="width: 100%; min-height: 150px;">
+            <% if (servers.length > 1) { %>
             <select id="serverURL" name="serverURL" class="login-input" >
-                  <option value="http://api.expresso.pr.gov.br">expresso.pr.gov.br</option>
-                  <option value="http://expresso.rafaelgobara.api.expressodev.celepar.parana">expresso.rafaelgobara.api.expressodev.celepar.parana</option>
-                  <option value="http://api.master.expresso.celepar.parana">api.master.expresso.celepar.parana</option>
-                  <option value="http://api.expresso.celepar.parana">api.expresso.celepar.parana</option>
-                  <option value="http://demo.expressolivre.org/api/rest/">demo.expressolivre.org</option>
+                  <% _.each(servers, function(server){ %>
+                        <option value="<%=server.getServerURL()%>"><%=server.get("serverName")%></option>
+                  <% }); %>
             </select>
+            <% } else { %>
+                  <% _.each(servers, function(server){ %>
+                        <input type="hidden" id="serverURL" name="serverURL" value="<%=server.getServerURL()%>" />
+                  <% }); %>
+            <% } %>
             <input id="username" type="username" name="username" class="login-input" value="" placeholder="Usu&aacute;rio" autofocus>
             <input id="password" type="password" name="password" class="login-input" value="" placeholder="Senha">
 
